--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@ layout: default
             <p>为什么要来美国参加夏令营？能得到什么不一样的收获嘛？请看 <a href="/docs/美国夏令营/">这里</a> .</p>
         </div>
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-code" aria-hidden="true"></i></h1>
-            <h3 class="text-center">创始人介绍</h3>
-            <p>如何能确保孩子在夏令营学到知识，开阔眼界，了解创办人也很重要。想了解更多信息，不妨点击<a href="/docs/创始人介绍/">这里</a>.</p>
+            <h1 class="text-center"><i class="fa fa-rocket" aria-hidden="true"></i></h1>
+            <h3 class="text-center">夏令营图片介绍</h3>
+            <p>想直观的了解夏令营，请看<a href="/docs/图片和视频/">夏令营图片介绍</a>！</p>
         </div>
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-rocket" aria-hidden="true"></i></h1>
-            <h3 class="text-center">图片和视频</h3>
-            <p>想直观的了解夏令营，请看<a href="/docs/图片和视频/">图片和视频</a>！</p>
+            <h1 class="text-center"><i class="fa fa-code" aria-hidden="true"></i></h1>
+            <h3 class="text-center">创始人初衷</h3>
+            <p>如何能确保孩子在夏令营学到知识，开阔眼界，了解创办人也很重要。想了解更多信息，不妨点击<a href="/docs/创始人初衷/">这里</a>.</p>
         </div>
     </div>
 </div>
