--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-rocket" aria-hidden="true"></i></h1>
             <h3 class="text-center">夏令营图片介绍</h3>
-            <p>想直观的了解夏令营，请看<a href="/docs/图片和视频/">夏令营图片介绍</a>！</p>
+            <p>想直观的了解夏令营，请看<a href="/docs/夏令营图片介绍/">夏令营图片介绍</a>！</p>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-code" aria-hidden="true"></i></h1>
