--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ layout: default
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-code" aria-hidden="true"></i></h1>
             <h3 class="text-center">创始人初衷</h3>
-            <p>如何能确保孩子在夏令营学到知识，开阔眼界，了解创办人也很重要。想了解更多信息，不妨点击<a href="/docs/创始人初衷/">这里</a>.</p>
+            <p>如何能确保孩子在夏令营学到知识，开阔眼界，了解创办人也很重要。想了解更多信息，不妨点击<a href="/docs/创始人介绍/">这里</a>.</p>
         </div>
     </div>
 </div>
