--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ layout: default
       <div class="col-sm-4">
         <h3 class="text-center">快来报名吧</h2>
           <ul class="info-card">
-              <li><i class="fa-pen"></i>&nbsp;年龄：8-15岁</li>
-              <li><i class="fa-pen"></i>&nbsp;夏令营时间：7/14/2024 - 7/29/2024</li>
+              <li><i class="fa-solid fa-pen"></i>&nbsp;年龄：8-15岁</li>
+              <li><i class="fa-solid fa-pen"></i>&nbsp;夏令营时间：7/14/2024 - 7/29/2024</li>
           </ul>
       </div>
     </div>
