--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
         
     </div>
      <div class="container" style="margin-top: 30px;">
-         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/行程概括/" | prepend: site.baseurl }}" role="button">详细方案</a></p>
+         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/行程特色/" | prepend: site.baseurl }}" role="button">详细方案</a></p>
      </div>
 
 
