--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>方博士硅谷研学团</h1>
+        <h1>硅谷斯坦福研学团</h1>
         <p>提供安全，高品质的2024美国夏令营方案</p>
         
     </div>
