--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ layout: default
         </div>
         <div class="col-sm-4 info-card">
             <h1 class="text-center"><i class="fa fa-rocket" aria-hidden="true"></i></h1>
-            <h3 class="text-center">图片和视频</h3>
-            <p style="text-align:center;">想直观的了解夏令营，请看<a href="/docs/图片和视频/">图片和视频</a>！</p>
+            <h3 class="text-center">夏令营图片介绍</h3>
+            <p style="text-align:center;">想直观的了解夏令营，请看<a href="/docs/夏令营图片介绍/">夏令营图片介绍</a>！</p>
         </div>
     </div>
 </div>
