--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ layout: default
         <div class="col-sm-4 info-card">
             <h1 class="text-center"><i class="fa fa-code" aria-hidden="true"></i></h1>
             <h3 class="text-center">创始人介绍</h3>
-            <p class="text-center">如何能确保孩子在夏令营学到知识，开阔眼界，了解创办人也很重要。</br><a href="/docs/创始人介绍/">了解更多信息</a>.</p>
+            <p class="text-center">如何能确保孩子在夏令营学到知识，开阔眼界，了解创办人也很重要。</br><a href="/docs/创办人介绍/">了解更多信息</a>.</p>
         </div>
         <div class="col-sm-4 info-card">
             <h1 class="text-center"><i class="fa fa-rocket" aria-hidden="true"></i></h1>
