--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@ layout: default
       <div class="col-sm-4">
         <h3 class="text-center">孩子的收获</h2>
           <ul class="info-card">
-              <li><i class="fa-solid fa-check"></i>&nbsp;名校课堂及美国学习生活体验</li>
-              <li><i class="fa-solid fa-check"></i>&nbsp;专业前沿的计算机科学知识</li>
+              <li><i class="fa-solid fa-check"></i>&nbsp;美国名校课堂及学习生活体验</li>
+              <li><i class="fa-solid fa-check"></i>&nbsp;具有科技前瞻性的科技类课程</li>
               <li><i class="fa-solid fa-check"></i>&nbsp;户外探索培养独立的品格和开拓视野</li>
               <li><i class="fa-solid fa-check"></i>&nbsp;赏析他国美食美景文化礼仪</li>
-              <li><i class="fa-solid fa-check"></i>&nbsp;夏令营结业证书和老师推荐信</li>
+              <li><i class="fa-solid fa-check"></i>&nbsp;夏令营结业证书和后续申学推荐信</li>
           </ul>
       </div>
       <div class="col-sm-4">
