--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 <div class="header-container jumbotron">
     <div class="container">
         <h1>硅谷斯坦福研学团</h1>
-        <p>提供安全，高品质的2024美国夏令营方案</p>
+        <p>提供安全，高品质的<br>2024美国夏令营方案</p>
         
     </div>
      <div class="container" style="margin-top: 30px;">
